fix: update regulation-files-reader url
